modeling data added

--- a/Data manipulation and modeling/Cryptocurrency_Arbitrage_Trading.ipynb
+++ b/Data manipulation and modeling/Cryptocurrency_Arbitrage_Trading.ipynb
@@ -1055,7 +1055,7 @@
         "import pandas as pd\n",
         "df1 = pd.read_csv('/content/crypto_data.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1066,12 +1066,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 439
         },
-        "outputId": "d3d00042-8e85-492d-eb31-945938b0c537"
+        "outputId": "ec70bf5c-7627-4510-cc06-94f9bed09b88"
       },
       "source": [
         "df1"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1276,7 +1276,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -1288,7 +1288,7 @@
       "source": [
         "trades = df1.iloc[:, 7:10]"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -1300,7 +1300,7 @@
         "import numpy as np\n",
         "trades = np.array(trades)"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1312,7 +1312,7 @@
         "for i in range (trades.shape[0]-1):\n",
         "  trades[i,:] = trades [i+1, :] "
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1327,7 +1327,7 @@
       "source": [
         "trades"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1358,7 +1358,7 @@
         "bids = df1.iloc[:,1:4]\n",
         "asks = df1.iloc[:, 4:7]"
       ],
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1370,7 +1370,7 @@
         "bids = np.array(bids)\n",
         "asks = np.array(asks)"
       ],
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1392,7 +1392,7 @@
         "  max_bids.append(max(bids_list[i]))\n",
         "  min_asks.append(min(asks_list[i]))"
       ],
-      "execution_count": 13,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1422,7 +1422,7 @@
         "    labels.append(0)\n",
         "    zero += 1"
       ],
-      "execution_count": 36,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1433,7 +1433,7 @@
           "height": 336
         },
         "id": "KBaXxN9ehkox",
-        "outputId": "e807fcad-8547-4169-8a8e-7a115955a699"
+        "outputId": "b203329a-e9e2-49a6-d75f-d2571a4da079"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -1444,7 +1444,7 @@
         "ax.bar(Labels, Values)\n",
         "plt.show()"
       ],
-      "execution_count": 37,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1469,7 +1469,7 @@
       "source": [
         "crypto_data = df1.iloc[:, 4:7]"
       ],
-      "execution_count": 53,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1483,7 +1483,7 @@
         "crypto_data['Coinbase_tr'] = trades[:,2]\n",
         "crypto_data['Labels'] = labels"
       ],
-      "execution_count": 54,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1494,12 +1494,12 @@
           "height": 419
         },
         "id": "i4qtA1wEU4-c",
-        "outputId": "a08d5b98-b6c8-481b-c72c-1f4f73eb9281"
+        "outputId": "b31c0ee8-681f-45ed-a6c8-da948dcd3468"
       },
       "source": [
         "crypto_data"
       ],
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1631,7 +1631,7 @@
               "      <td>0.027319</td>\n",
               "      <td>0.027305</td>\n",
               "      <td>0.027320</td>\n",
-              "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>10051</th>\n",
@@ -1659,7 +1659,7 @@
               "10047         0.027315          0.027320  ...     0.027320       0\n",
               "10048         0.027323          0.027320  ...     0.027320       0\n",
               "10049         0.027320          0.027320  ...     0.027320       0\n",
-              "10050         0.027316          0.027320  ...     0.027320       1\n",
+              "10050         0.027316          0.027320  ...     0.027320       0\n",
               "10051         0.027318          0.027320  ...     0.027320       0\n",
               "\n",
               "[10052 rows x 7 columns]"
@@ -1668,9 +1668,20 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FF2aSfZfoS6m"
+      },
+      "source": [
+        "crypto_data.to_csv(\"modeling_data.csv\")"
+      ],
+      "execution_count": 14,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1701,7 +1712,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1738,7 +1749,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1763,7 +1774,7 @@
       "source": [
         "crypto_data = np.array(crypto_data)"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1785,7 +1796,7 @@
         "scaler = MinMaxScaler(feature_range=(0,1))\n",
         "crypto_data = scaler.fit_transform(crypto_data)"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1817,7 +1828,7 @@
         "\n",
         "train_x, train_y, test_x, test_y = np.array(train_x), np.array(train_y), np.array(test_x), np.array(test_y)"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1832,7 +1843,7 @@
       "source": [
         "test_x"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1863,7 +1874,7 @@
         "train_x = train_x.reshape((train_x.shape[0], 1, train_x.shape[1]))\n",
         "test_x = test_x.reshape((test_x.shape[0], 1, test_x.shape[1]))"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1890,7 +1901,7 @@
         "model_lstm. compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
         "# fit network"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1941,7 +1952,7 @@
         "plt.ylabel('Mean Square Error')\n",
         "plt.show()"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3012,7 +3023,7 @@
         "plt.ylabel('Mean Square Error')\n",
         "plt.show()"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6847,7 +6858,7 @@
       "source": [
         "history = model_lstm.fit(train_x, train_y, batch_size=32, epochs=500, validation_split=0.1, verbose=1)"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7887,7 +7898,7 @@
         "plt.legend(['train', 'val'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7916,7 +7927,7 @@
       "source": [
         "model_lstm.evaluate(test_x, test_y)"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
